<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/gradient_background">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="-10dp"
        android:background="#fff"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
                <EditText
                    android:id="@+id/sign_up_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/login_icon"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:nextFocusDown="@id/sign_up_surname" />
                <EditText
                    android:id="@+id/sign_up_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/login_icon"
                    android:hint="@string/surname"
                    android:inputType="text"
                    android:nextFocusDown="@id/sign_up_login" />
                <EditText
                    android:id="@+id/sign_up_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/login_icon"
                    android:hint="@string/login"
                    android:inputType="text"
                    android:nextFocusDown="@id/sign_up_email" />
                <EditText
                    android:id="@+id/sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/email_icon"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/sign_up_password" />

                <EditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_icon"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/sign_up_confirm_password"
                    android:layout_marginTop="10dp"/>
                <EditText
                    android:id="@+id/sign_up_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_icon"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/sign_up_btn"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/sign_up_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_background"
                    android:text="@string/sign_up"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/go_to_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textSize="16sp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/go_to_forgot_password_from_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/forgot_password"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>




    </RelativeLayout>


</LinearLayout>
